# nlp100

./: .gitignore  README.md  pyproject.toml
chap02/: README.md  ex10  ex11  ex12  ex13  ex14  ex15  ex17  ex18  ex19
chap05/: chap05.ipynb
chap06/: chap06.ipynb
