[tool.poetry]
name = "nlp100"
version = "0.1.0"
description = ""
authors = ["Hiroo Takizawa <kei.cataract@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
numpy = "^1.20.3"
pandas = "^1.2.4"
jupyterlab = "^3.0.16"
pydantic = "^1.8.2"
pyknp = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
